Profile, login functions are added.

--- a/main/templates/layout/basic.html
+++ b/main/templates/layout/basic.html
@@ -26,25 +26,28 @@
                 </button>
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <div class="navbar-nav">
-                        <div class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle"
-                            data-bs-toggle="dropdown" href="#">Профиль</a>
-                            <div class="dropdown-menu">
-                                <a class="dropdown-item" href="#">Мои объявления</a>
-                                <a class="dropdown-item" href="#">Изменить личные данные</a>
-                                <a class="dropdown-item" href="#">Изменить пароль</a>
-                                <hr class="dropdown-divider">
-                                <form class="px-3">
-                                    {% csrf_token %}
-                                    {% bootstrap_button 'Выйти'
-                                    button_class='btn-danger' %}
-                                </form>
-                                <hr class="dropdown-divider">
-                                <a class="dropdown-item" href="#">Удалить</a>
+                        {% if user.is_authenticated %}
+                            <div class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle"
+                                data-bs-toggle="dropdown" href="{% url 'main:profile' %}">Профиль</a>
+                                <div class="dropdown-menu">
+                                    <a class="dropdown-item" href="#">Мои объявления</a>
+                                    <a class="dropdown-item" href="#">Изменить личные данные</a>
+                                    <a class="dropdown-item" href="#">Изменить пароль</a>
+                                    <hr class="dropdown-divider">
+                                    <form class="px-3">
+                                        {% csrf_token %}
+                                        {% bootstrap_button 'Выйти'
+                                        button_class='btn-danger' %}
+                                    </form>
+                                    <hr class="dropdown-divider">
+                                    <a class="dropdown-item" href="#">Удалить</a>
+                                </div>
                             </div>
-                        </div>
-                    <a class="nav-link" href="#">Регистрация</a>
-                    <a class="nav-link" href="#">Вход</a>
+                    {% else %}
+                        <a class="nav-link" href="#">Регистрация</a>
+                        <a class="nav-link" href="{% url 'main:login' %}">Вход</a>
+                    {% endif %}
                     </div>
                 </div>
             </div>
